--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
     <div class="container" id="header">
         <div class="container" id="top-header">
             <div class="container" id="search">
-
+                <h1 class="icon">
+                    🔎
+                </h1>
+                <input type="search" name="search-bar" id="search-bar">
             </div>
             <div class="container" id="profile">
-                
+                <h1 class="notification">
+                    🔔 
+                </h1>
+                <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" width="40px" height="40px" class="profile-picture" alt="profile picture">
+                  <h4 class="user-name">
+                       Julio Peters
+                  </h4>
             </div>
         </div>
         <div class="container" id="bottom-header">
