--- a/index.html
+++ b/index.html
@@ -27,10 +27,26 @@
         </div>
         <div class="container" id="bottom-header">
             <div class="container" id="logo">
-
+                 <div class="logotype">
+                      <img src="https://cdn.pixabay.com/photo/2023/09/12/20/41/ai-generated-8249557_960_720.png" alt="Palm tree logotype AI generated" width="50px" height="50px" srcset="">
+                 </div>
+                 <div class="welcome-message">
+                       <div class="greeting">
+                            <p class="welcome">
+                                Hi! welcome back.
+                            </p>
+                       </div>
+                       <div class="user">
+                        <h4 class="u-name">
+                            Julio Peters.
+                        </h4>
+                       </div>
+                 </div>
             </div>
             <div class="container" id="navbar">
-
+                   <button type="button" class="nav-btn" id="new-btn">New</button>
+                   <button type="button" class="nav-btn" id="upload-btn">Upload</button>
+                   <button type="button" class="nav-btn" id="Share">Share</button>
             </div>
         </div>
     </div>
@@ -60,19 +76,19 @@
         
     </div>
     <div class="container" id="article">
-        <div class="article" id="card1"></div>
-        <div class="article" id="card2"></div>
-        <div class="article" id="card3"></div>
-        <div class="article" id="card4"></div>
-        <div class="article" id="card5"></div>
-        <div class="article" id="card6"></div>
-        <div class="article" id="card7"></div>
-        <div class="article" id="card8"></div>
-        <div class="article" id="card9"></div>
+        <div class="article" id="card1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="article" id="card9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
     </div>
     <div class="container" id="news">
-        <div class="news" id="news1"></div>
-        <div class="news" id="news2"></div>
+        <div class="news" id="news1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        <div class="news" id="news2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
     </div>
     <script type="module" src="./script/app.mjs"></script>
 </body>
