--- a/index.html
+++ b/index.html
@@ -67,10 +67,22 @@
         </div>
          <div class="container" id="menu-container">
             <div class="container" id="title-sidebar-container">
-
+                  <h1 class="title">Menu</h1>
           </div>
         <div class="container" id="menu">
-
+            <ul id="menu-list">
+                <li class="menu-item" id="home">Home</li>
+                <li class="menu-item" id="pro">Profile</li>
+                <li class="menu-item" id="message">Message</li>
+                <li class="menu-item" id="history">History</li>
+                <li class="menu-item" id="tasks">Tasks</li>
+                <li class="menu-item" id="communities">Communities</li>
+            </ul>
+            <ul id="settings">
+                <li class="menu-item" id="setting">settings</li>
+                <li class="menu-item" id="support">support</li>
+                <li class="menu-item" id="privacy">privacy</li>
+            </ul>
           </div>
         </div>
         
