mobile landscape postion adjusted.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </div>
     <div class="container" id="side-bar">
         <div class="container" id="drop-down-menu-container">
-            <label for="menu">MENU</label>
-            <select name="menu" id="menu" >
+            <label for="drop-menu">MENU</label>
+            <select name="drop-menu" id="drop-menu" >
                 <option value="home">Home</option>
                 <option value="profile">Profile</option>
                 <option value="message">Message</option>
