--- a/index.html
+++ b/index.html
@@ -87,20 +87,33 @@
         </div>
         
     </div>
-    <div class="container" id="article">
-        <div class="article" id="card1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="article" id="card9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-    </div>
-    <div class="container" id="news">
-        <div class="news" id="news1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
-        <div class="news" id="news2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+    <div class="container" id="main">
+        <div class="container" id="projects">
+            <br>
+            <h3>Your Projects</h3>
+            <div class="container" id="article">
+                <div class="article" id="card1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+                <div class="article" id="card9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+            </div>
+        </div>
+        <div class="container" id="news">
+
+            <div class="container" id="latest-news">
+                <h4>Announcements</h4>
+                <div class="news" id="news1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+            </div>
+            <div class="container" id="trending">
+                <h4>Trending now</h4>
+                <div class="news" id="news2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium, deserunt architecto, pariatur dolore mollitia ullam qui consequatur adipisci expedita soluta explicabo ratione corporis quis sed animi suscipit quaerat voluptatum!</div>
+        </div>
+            </div>
     </div>
     <script type="module" src="./script/app.mjs"></script>
 </body>
